--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,31 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
+@import "reset.css";
+@import "variables.css";
 
+/*components*/
+@import "components/status-bar.css";
+@import "components/nav-bar.css";
+@import "components/screen-header.css";
+@import "components/user-component.css";
+@import "components/badge.css";
+@import "components/no-mobile.css";
+@import "components/icon-row.css";
+@import "components/alt-screen-header.css";
+/*screens*/
+@import "screens/login.css";
+@import "screens/friends.css";
+@import "screens/find.css";
+@import "screens/more.css";
+@import "screens/alt-screen-header.css";
+@import "screens/setting.css";
+@import "screens/chat.css";
 body {
+  color: #2e363e;
   font-family: "Quicksand", sans-serif;
+  overflow-y: scroll;
 }
-.status-bar {
-  display: flex;
-  justify-content: space-center;
-}
-.status-bar__column {
-  width: 33%;
-}
-.status-bar__column:first-child span {
-  margin-right: 5px;
-}
-.status-bar__column:nth-child(2) {
-  display: flex;
-  justify-content: center;
-}
-.status-bar__column:last-child {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-.status-bar__column .fa-battery-quarter {
-  margin: 0px 5px;
+.main-screen {
+  padding-right: var(--horizontal-space);
+  padding-bottom: 70px;
+  padding-left: var(--horizontal-space);
 }
